--- a/index.html
+++ b/index.html
@@ -1,29 +1,66 @@
 <!doctype html>
 <html lang="en">
-
+<script src="js/personnes.js"></script>
+<script src="js/verbes.js"></script>
+<script src="js/noms.js"></script>
+<script src="js/adjectifs.js"></script>
+<script src="js/prepositions.js"></script>
 
 
 <body>
-	<head onload="displayHello()"> My chinese vocabulary</head>
+	<head onload="displayHello()"> My chinese vocabulary</head><br>
 
-
-
+<br>
+<div>Sujets</div>
 <table border=1 id="subject">
  <tr>
  	<th>Français</th>
  	<th>Pinyin</th>
  </tr>
-  <tr>
- 	<td>Je</td>
- 	<td>Wo</td>
- </tr>
- <tr>
- 	<td>Tu</td>
- 	<td>Ni</td>
  </tr>
 </table>
 
-<button onclick="fillTable();">Load</button>
+<br>
+<div>Verbes</div>
+<table border=1 id="verbes">
+ <tr>
+    <th>Français</th>
+    <th>Pinyin</th>
+ </tr>
+ </tr>
+</table>
+
+<br>
+<div>Noms</div>
+<table border=1 id="noms">
+ <tr>
+    <th>Français</th>
+    <th>Pinyin</th>
+ </tr>
+ </tr>
+</table>
+
+<br>
+<div>Adjectifs</div>
+<table border=1 id="adjectifs">
+ <tr>
+    <th>Français</th>
+    <th>Pinyin</th>
+ </tr>
+ </tr>
+</table>
+
+<br>
+<div>Prepositions</div>
+<table border=1 id="prepositions">
+ <tr>
+    <th>Français</th>
+    <th>Pinyin</th>
+ </tr>
+ </tr>
+</table>
+
+<!--<button onclick="fillTable();">Load</button>-->
 
 
 </body>
