--- a/index.html
+++ b/index.html
@@ -1,66 +1,133 @@
 <!doctype html>
 <html lang="en">
+<link rel="stylesheet" href="css/styles_mod2.css">
+<script src="js/jquery-2.1.4.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/bootstrap.js"></script>
+
+
 <script src="js/personnes.js"></script>
 <script src="js/verbes.js"></script>
 <script src="js/noms.js"></script>
 <script src="js/adjectifs.js"></script>
 <script src="js/prepositions.js"></script>
+<script src="js/couleurs.js"></script>
+<script src="js/politesses.js"></script>
+<script src="js/corps.js"></script>
 
 
 <body>
 	<head onload="displayHello()"> My chinese vocabulary</head><br>
+    <!--<button onclick="fillAll();">Reload</button>-->
 
-<br>
-<div>Sujets</div>
-<table border=1 id="subject">
- <tr>
- 	<th>Français</th>
- 	<th>Pinyin</th>
- </tr>
- </tr>
+    <br>
+
+    <section class="row font">
+      <div class="col-lg-2 col-md-6 col-sd-12">
+       <head class="contour">Sujets</head>
+       <table border=1 id="subject" >
+           <tr>
+            <th>Français</th>
+            <th>Pinyin</th>
+        </tr>
+    </tr>
 </table>
+</div>
+</section>
 
-<br>
-<div>Verbes</div>
-<table border=1 id="verbes">
- <tr>
-    <th>Français</th>
-    <th>Pinyin</th>
- </tr>
- </tr>
+<section class="row font">
+  <div class="recipe col-lg-2 col-md-6 col-sd-12">
+    <head class="contour">Verbes</head>
+    <table border=1 id="verbes">
+       <tr>
+        <th>Français</th>
+        <th>Pinyin</th>
+    </tr>
+</tr>
 </table>
+</div>
+</section>
 
-<br>
-<div>Noms</div>
-<table border=1 id="noms">
- <tr>
-    <th>Français</th>
-    <th>Pinyin</th>
- </tr>
- </tr>
+<section class="row font">
+  <div class="recipe col-lg-2 col-md-6 col-sd-12">
+    <head class="contour">Adjectifs</head>
+    <table border=1 id="adjectifs">
+       <tr>
+        <th>Français</th>
+        <th>Pinyin</th>
+    </tr>
+</tr>
 </table>
+</div>
+</section>
 
-<br>
-<div>Adjectifs</div>
-<table border=1 id="adjectifs">
- <tr>
-    <th>Français</th>
-    <th>Pinyin</th>
- </tr>
- </tr>
+<section class="row font">
+  <div class="recipe col-lg-2 col-md-6 col-sd-12">
+    <head class="contour">Noms</head>
+    <table border=1 id="noms">
+       <tr>
+        <th>Français</th>
+        <th>Pinyin</th>
+    </tr>
+</tr>
 </table>
+</div>
+</section>
 
-<br>
-<div>Prepositions</div>
-<table border=1 id="prepositions">
- <tr>
-    <th>Français</th>
-    <th>Pinyin</th>
- </tr>
- </tr>
+<section class="row font">
+  <div class="recipe col-lg-2 col-md-6 col-sd-12">
+    <head class="contour">Prepositions</head>
+    <table border=1 id="prepositions">
+       <tr>
+        <th>Français</th>
+        <th>Pinyin</th>
+    </tr>
+</tr>
 </table>
+</div>
+</section>
 
-<!--<button onclick="fillTable();">Load</button>-->
+<section class="row font">
+  <div class="recipe col-lg-2 col-md-6 col-sd-12">
+    <head class="contour">Couleurs</head>
+    <table border=1 id="couleurs">
+       <tr>
+        <th>Français</th>
+        <th>Pinyin</th>
+    </tr>
+</tr>
+</table>
+</div>
+</section>
+
+<section class="row font">
+  <div class="recipe col-lg-2 col-md-6 col-sd-12">
+    <head class="contour">Politesses</head>
+    <table border=1 id="politesses">
+       <tr>
+        <th>Français</th>
+        <th>Pinyin</th>
+    </tr>
+</tr>
+</table>
+</div>
+</section>
+
+<section class="row font">
+  <div class="recipe col-lg-2 col-md-6 col-sd-12">
+    <head class="contour">Corps</head>
+    <table border=1 id="corps">
+       <tr>
+        <th>Français</th>
+        <th>Pinyin</th>
+    </tr>
+</tr>
+</table>
+</div>
+</section>
+
+
+
 
 
 </body>
