--- a/index.html
+++ b/index.html
@@ -14,121 +14,16 @@
 <script src="js/couleurs.js"></script>
 <script src="js/politesses.js"></script>
 <script src="js/corps.js"></script>
+<script src="js/idioms.js"></script>
 
 
 <body>
 	<head onload="displayHello()"> My chinese vocabulary</head><br>
-    <!--<button onclick="fillAll();">Reload</button>-->
+    <button onclick="cleanAndFill();">Reload</button>
 
     <br>
 
-    <section class="row font">
-      <div class="col-lg-2 col-md-6 col-sd-12">
-       <head class="contour">Sujets</head>
-       <table border=1 id="subject" >
-           <tr>
-            <th>Français</th>
-            <th>Pinyin</th>
-        </tr>
-    </tr>
-</table>
-</div>
-</section>
-
-<section class="row font">
-  <div class="recipe col-lg-2 col-md-6 col-sd-12">
-    <head class="contour">Verbes</head>
-    <table border=1 id="verbes">
-       <tr>
-        <th>Français</th>
-        <th>Pinyin</th>
-    </tr>
-</tr>
-</table>
-</div>
-</section>
-
-<section class="row font">
-  <div class="recipe col-lg-2 col-md-6 col-sd-12">
-    <head class="contour">Adjectifs</head>
-    <table border=1 id="adjectifs">
-       <tr>
-        <th>Français</th>
-        <th>Pinyin</th>
-    </tr>
-</tr>
-</table>
-</div>
-</section>
-
-<section class="row font">
-  <div class="recipe col-lg-2 col-md-6 col-sd-12">
-    <head class="contour">Noms</head>
-    <table border=1 id="noms">
-       <tr>
-        <th>Français</th>
-        <th>Pinyin</th>
-    </tr>
-</tr>
-</table>
-</div>
-</section>
-
-<section class="row font">
-  <div class="recipe col-lg-2 col-md-6 col-sd-12">
-    <head class="contour">Prepositions</head>
-    <table border=1 id="prepositions">
-       <tr>
-        <th>Français</th>
-        <th>Pinyin</th>
-    </tr>
-</tr>
-</table>
-</div>
-</section>
-
-<section class="row font">
-  <div class="recipe col-lg-2 col-md-6 col-sd-12">
-    <head class="contour">Couleurs</head>
-    <table border=1 id="couleurs">
-       <tr>
-        <th>Français</th>
-        <th>Pinyin</th>
-    </tr>
-</tr>
-</table>
-</div>
-</section>
-
-<section class="row font">
-  <div class="recipe col-lg-2 col-md-6 col-sd-12">
-    <head class="contour">Politesses</head>
-    <table border=1 id="politesses">
-       <tr>
-        <th>Français</th>
-        <th>Pinyin</th>
-    </tr>
-</tr>
-</table>
-</div>
-</section>
-
-<section class="row font">
-  <div class="recipe col-lg-2 col-md-6 col-sd-12">
-    <head class="contour">Corps</head>
-    <table border=1 id="corps">
-       <tr>
-        <th>Français</th>
-        <th>Pinyin</th>
-    </tr>
-</tr>
-</table>
-</div>
-</section>
-
-
-
-
+    <section id='mainDiv'></section>
 
 </body>
 
