--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <script src="js/politesses.js"></script>
 <script src="js/corps.js"></script>
 <script src="js/idioms.js"></script>
+<script src="js/evenements.js"></script>
+<script src="js/cuisines.js"></script>
+<script src="js/temps.js"></script>
 
 
 <body>
